--- a/register.html
+++ b/register.html
@@ -8,9 +8,7 @@
     </script>
 </head>
   <body>
-    <p align="center"><a 
-    href="index.html"><img 
-src="https://fontmeme.com/permalink/210826/eb2ec528db4569fc99743c4afb9d8bc3.png" alt="pokemon-font" border="0"></a>
+    <p align="center"><a id ="logo" href="index.html"><img src="https://fontmeme.com/permalink/210826/eb2ec528db4569fc99743c4afb9d8bc3.png" alt="pokemon-font" border="0"></a>
 <div class="boxed">
     <h1 id="boxBanner" style="font-size:40px;font-family:'pokefont';">Register New Account:</h1>
   <div id="registrationBox">
