--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
 
   <body background= href="https://pixelz.cc/images/pokemon-poke-ball-wqhd-1440p-wallpaper/">
     <p align="center"><a id="logo" href="index.html"><img src="https://fontmeme.com/permalink/210826/eb2ec528db4569fc99743c4afb9d8bc3.png" alt="pokemon-font" border="0"></a>
-<div class="boxed">
-  <h1 style="font-size:40px;font-family:'pokefont';">Sign in:</h1>
-  <div>
-    <label for="login">Username:</label><br>
-    <input type="text" id="loginName" name="login" required><br>
-    <label for="password">Password:</label><br>
-    <input type="password" id="loginPassword" name="password" required>
-    </br></br>
-    <button type="submit" class="submitbutton" onclick="doLogin()">Login</button>
-  </div>
-
+<div class="page-wrap">
+  <div class="boxed">
+    <h1 style="font-size:40px;font-family:'pokefont';">Sign in:</h1>
+    <div>
+      <label for="login">Username:</label><br>
+      <input type="text" id="loginName" name="login" required><br>
+      <label for="password">Password:</label><br>
+      <input type="password" id="loginPassword" name="password" required>
+      </br></br>
+      <button type="submit" class="submitbutton" onclick="doLogin()">Login</button>
+    </div>
 	
-	<p class="loginresult" id="loginResult"></p>
-	<h1 style="font-size:40px;font-family:'pokefont';">-or-</h1>
-    	<button type="button" class="submitbutton" onclick="window.location.href='register.html'">Register(New Users)</button></br>
+    <p class="loginresult" id="loginResult"></p>
+    <h1 style="font-size:40px;font-family:'pokefont';">-or-</h1>
+        <button type="button" class="submitbutton" onclick="window.location.href='register.html'">Register(New Users)</button></br>
+  </div>
 </div>
   </body>
 </html>
