--- a/dex.html
+++ b/dex.html
@@ -55,7 +55,7 @@
 	</ul>
 	</nav>
 	<div class="page-wrap">
-		<div class="boxed" style="display: block; padding-top: 1%; height:auto; z-index: -1;  margin-top: 6%">
+		<div class="boxed" style="display: block; padding-top: 1%; height:190px; z-index: -1;  margin-top: 6%">
 			<p id="success"></p>
 			<a id="logo" onclick="location.reload()"><img src="https://fontmeme.com/permalink/210826/eb2ec528db4569fc99743c4afb9d8bc3.png"  alt="pokemon-font" border="0"></a>
 		</div>
